include/Urban.h

// Opaque handle type (pointer to private struct)
typedef struct _p_UrbanType *UrbanType;
// Error codes for API calls
typedef enum {
  URBAN_SUCCESS = 0,
  URBAN_ERR_INVALID_ARGUMENT = 1,
  URBAN_ERR_NOT_INITIALIZED = 2,
  URBAN_ERR_INTERNAL = 3,
  URBAN_ERR_SIZE_MISMATCH = 4
} UrbanErrorCode;
// Hydrology boundary condition setter functions
URBAN_EXTERN void
UrbanSetInfiltrationFluxForPerviousRoad(UrbanType urban, const double *values,
                                        int length, UrbanErrorCode *status);
URBAN_EXTERN void
UrbanSetTranspirationFluxForPerviousRoad(UrbanType urban, const double *values,
                                         const int size[2],
                                         UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetWaterTableDepth(UrbanType urban, const double *values,
                                          int length, UrbanErrorCode *status);
// Soil water content setter functions
URBAN_EXTERN void
UrbanSetSoilLiquidWaterForPerviousRoad(UrbanType urban, const double *values,
                                       const int size[2],
                                       UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetSoilIceContentForPerviousRoad(UrbanType urban,
                                                        const double *values,
                                                        const int size[2],
                                                        UrbanErrorCode *status);
// Atmospheric forcing setter functions
URBAN_EXTERN void UrbanSetAtmTemp(UrbanType urban, const double *values,
                                  int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmPotTemp(UrbanType urban, const double *values,
                                     int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmRho(UrbanType urban, const double *values,
                                 int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmSpcHumd(UrbanType urban, const double *values,
                                     int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmPress(UrbanType urban, const double *values,
                                   int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmWindU(UrbanType urban, const double *values,
                                   int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmWindV(UrbanType urban, const double *values,
                                   int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmCoszen(UrbanType urban, const double *values,
                                    int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmFracSnow(UrbanType urban, const double *values,
                                      int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmLongwaveDown(UrbanType urban, const double *values,
                                          int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetAtmShortwaveDown(UrbanType urban,
                                           const double *values,
                                           const int size[3],
                                           UrbanErrorCode *status);
// Dew to snow (QflxDewSnow) getter functions
URBAN_EXTERN void UrbanGetQflxDewSnowRoof(UrbanType urban, double *values,
                                          int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxDewSnowImperviousRoad(UrbanType urban,
                                                    double *values, int length,
                                                    UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxDewSnowPerviousRoad(UrbanType urban,
                                                  double *values, int length,
                                                  UrbanErrorCode *status);
// Dew to bare ground (QflxDewGrnd) getter functions
URBAN_EXTERN void UrbanGetQflxDewGrndRoof(UrbanType urban, double *values,
                                          int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxDewGrndImperviousRoad(UrbanType urban,
                                                    double *values, int length,
                                                    UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxDewGrndPerviousRoad(UrbanType urban,
                                                  double *values, int length,
                                                  UrbanErrorCode *status);
// Surface runoff setter functions (pervious road inputs)
URBAN_EXTERN void UrbanSetWtfactPerviousRoad(UrbanType urban,
                                             const double *values, int length,
                                             UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetFoverPerviousRoad(UrbanType urban,
                                            const double *values, int length,
                                            UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetFrostTablePerviousRoad(UrbanType urban,
                                                 const double *values,
                                                 int length,
                                                 UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetZwtPerchedPerviousRoad(UrbanType urban,
                                                 const double *values,
                                                 int length,
                                                 UrbanErrorCode *status);
// Surface runoff compute function
URBAN_EXTERN void UrbanComputeSurfaceRunoff(UrbanType urban, double dtime,
                                            UrbanErrorCode *status);
// Surface runoff getter functions (QflxSurf — all five surfaces)
URBAN_EXTERN void UrbanGetQflxSurfRoof(UrbanType urban, double *values,
                                       int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxSurfImperviousRoad(UrbanType urban,
                                                 double *values, int length,
                                                 UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxSurfPerviousRoad(UrbanType urban, double *values,
                                               int length,
                                               UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxSurfSunlitWall(UrbanType urban, double *values,
                                             int length,
                                             UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxSurfShadedWall(UrbanType urban, double *values,
                                             int length,
                                             UrbanErrorCode *status);
// Updated TopH2OSoiLiq after ponding (roof and impervious road)
URBAN_EXTERN void UrbanGetTopH2OSoiLiqRoof(UrbanType urban, double *values,
                                           int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetTopH2OSoiLiqImperviousRoad(UrbanType urban,
                                                     double *values, int length,
                                                     UrbanErrorCode *status);