include/urban_mod.F90


    ! QflxDewSnow getter C interfaces
    subroutine UrbanGetQflxDewSnowRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxDewSnowRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxDewSnowRoof_C

    subroutine UrbanGetQflxDewSnowImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxDewSnowImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxDewSnowImperviousRoad_C

    subroutine UrbanGetQflxDewSnowPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxDewSnowPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxDewSnowPerviousRoad_C

    ! QflxDewGrnd getter C interfaces
    subroutine UrbanGetQflxDewGrndRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxDewGrndRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxDewGrndRoof_C

    subroutine UrbanGetQflxDewGrndImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxDewGrndImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxDewGrndImperviousRoad_C

    subroutine UrbanGetQflxDewGrndPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxDewGrndPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxDewGrndPerviousRoad_C

    ! Surface runoff setter functions (pervious road inputs)
    subroutine UrbanSetWtfactPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetWtfactPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetWtfactPerviousRoad_C

    subroutine UrbanSetFoverPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetFoverPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetFoverPerviousRoad_C

    subroutine UrbanSetFrostTablePerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetFrostTablePerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetFrostTablePerviousRoad_C

    subroutine UrbanSetZwtPerchedPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetZwtPerchedPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetZwtPerchedPerviousRoad_C

    ! Surface runoff compute function
    subroutine UrbanComputeSurfaceRunoff_C(urban, dtime, status) &
      bind(C, name="UrbanComputeSurfaceRunoff")
      import :: c_ptr, c_int, c_double
      type(c_ptr), value :: urban
      real(c_double), value :: dtime
      integer(c_int) :: status
    end subroutine UrbanComputeSurfaceRunoff_C

    ! Surface runoff getter functions (QflxSurf — all five surfaces)
    subroutine UrbanGetQflxSurfRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxSurfRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxSurfRoof_C

    subroutine UrbanGetQflxSurfImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxSurfImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxSurfImperviousRoad_C

    subroutine UrbanGetQflxSurfPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxSurfPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxSurfPerviousRoad_C

    subroutine UrbanGetQflxSurfSunlitWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxSurfSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxSurfSunlitWall_C

    subroutine UrbanGetQflxSurfShadedWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxSurfShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxSurfShadedWall_C

    subroutine UrbanGetTopH2OSoiLiqRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetTopH2OSoiLiqRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetTopH2OSoiLiqRoof_C

    subroutine UrbanGetTopH2OSoiLiqImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetTopH2OSoiLiqImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetTopH2OSoiLiqImperviousRoad_C

    ! Atmospheric forcing setter functions
    subroutine UrbanSetAtmTemp_C(urban, values, length, status) bind(C, name="UrbanSetAtmTemp")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAtmTemp_C

    subroutine UrbanSetAtmPotTemp_C(urban, values, length, status) bind(C, name="UrbanSetAtmPotTemp")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAtmPotTemp_C

    subroutine UrbanSetAtmRho_C(urban, values, length, status) bind(C, name="UrbanSetAtmRho")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAtmRho_C

    subroutine UrbanSetAtmSpcHumd_C(urban, values, length, status) bind(C, name="UrbanSetAtmSpcHumd")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAtmSpcHumd_C

    subroutine UrbanSetAtmPress_C(urban, values, length, status) bind(C, name="UrbanSetAtmPress")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAtmPress_C

    subroutine UrbanSetAtmWindU_C(urban, values, length, status) bind(C, name="UrbanSetAtmWindU")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAtmWindU_C

    subroutine UrbanSetAtmWindV_C(urban, values, length, status) bind(C, name="UrbanSetAtmWindV")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAtmWindV_C

    subroutine UrbanSetAtmCoszen_C(urban, values, length, status) bind(C, name="UrbanSetAtmCoszen")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAtmCoszen_C

    subroutine UrbanSetAtmFracSnow_C(urban, values, length, status) bind(C, name="UrbanSetAtmFracSnow")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAtmFracSnow_C

    subroutine UrbanSetAtmLongwaveDown_C(urban, values, length, status) bind(C, name="UrbanSetAtmLongwaveDown")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetAtmLongwaveDown_C

    subroutine UrbanSetAtmShortwaveDown_C(urban, values, size, status) bind(C, name="UrbanSetAtmShortwaveDown")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanSetAtmShortwaveDown_C

    ! Hydrology boundary condition setter functions
    subroutine UrbanSetInfiltrationFluxForPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanSetInfiltrationFluxForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetInfiltrationFluxForPerviousRoad_C

    subroutine UrbanSetTranspirationFluxForPerviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanSetTranspirationFluxForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanSetTranspirationFluxForPerviousRoad_C

    subroutine UrbanSetWaterTableDepth_C(urban, values, length, status) bind(C, name="UrbanSetWaterTableDepth")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetWaterTableDepth_C

    ! Soil water content setter functions
    subroutine UrbanSetSoilLiquidWaterForPerviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanSetSoilLiquidWaterForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanSetSoilLiquidWaterForPerviousRoad_C

    subroutine UrbanSetSoilIceContentForPerviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanSetSoilIceContentForPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanSetSoilIceContentForPerviousRoad_C
